--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
@@ -14,11 +16,27 @@
                 <img src="img/Sushi-removebg-preview.png" alt="" srcset="">
             </div>
             <div class="left">
-                <div><a href="">Home</a></div>
-                <div><a href="">Menu</a></div>
-                <div><a href="">A Propos</a></div>
-                <div><a href="">Contact</a></div>
+                <div class="ktba">
+                    <div><a href="#">Home</a></div>
+                    <div><a href="menu.html">Menu</a></div>
+                    <div><a href="about.html">A Propos</a></div>
+                    <div><a href="contact.html">Contact</a></div>
+                </div>
+                <a href="#" id="openBtn">
+                    <span class="burger-icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                </a>
             </div>
+        </div>
+
+        <div class="ktba2">
+            <div><a href="index.html">Home</a></div>
+            <div><a href="menu.html">Menu</a></div>
+            <div><a href="about.html">A Propos</a></div>
+            <div><a href="contact.html">Contact</a></div>
         </div>
         <!-- img de la boutique -->
         <div class="imgkbira"></div>
@@ -51,44 +69,37 @@
                 <h3>
                     Une destination culinaire distinctive inspirée par la culture.
                 </h3>
-                  <p>
+                <p>
                     Senri no michi mo ippo kara — Même un voyage de mille
                     kilomètres commence par un seul pas.
-                  </p>
-                
-                  <input type="submit"  value="Our Venue"><br>
-                   <div class="tsewrate">
-                        <img
-                        src="public/playground_assets/image65826-c5se-200w.png"
-                        alt="image35825"
-                        class="home-image3"
-                    />
-                    <img
-                        src="public/playground_assets/image45825-qjwe-200w.png"
-                        alt="image45825"
-                        class="home-image4"
-                    />
-                    <img
-                        src="public/playground_assets/image55825-ecjb-200w.png"
-                        alt="image55825"
-                        class="home-image5"
-                    />
-                   </div>
+                </p>
+
+                <input type="submit" value="Our Venue"><br>
+                <div class="tsewrate">
+                    <img src="public/playground_assets/image65826-c5se-200w.png" alt="image35825" class="home-image3" />
+                    <img src="public/playground_assets/image45825-qjwe-200w.png" alt="image45825" class="home-image4" />
+                    <img src="public/playground_assets/image55825-ecjb-200w.png" alt="image55825" class="home-image5" />
+                </div>
             </div>
         </div>
-
+        <!--  -->
+        <br><br><br><br>
+        <!--  -->
         <!-- citation -->
         <div class="citation">
             <div>
                 <p>You can't go wrong with Chicken Mandi, I had it twice. The
                     chicken was cooked perfectly, juicy & soft (usually mandi
                     chicken is a bit dry). I would defiantly recommend it.</p>
-            </div>    
+            </div>
         </div>
+        <!--  -->
+        <br><br><br><br>
+        <!--  -->
         <!-- footer -->
         <footer class="footer">
             <div class="logo_footer">
-                <img  src="/img/Sushi-removebg-preview.png" alt="">
+                <img src="img/Sushi-removebg-preview.png" alt="logo_footer">
             </div>
             <div class="menu_footer">
                 <ul>
@@ -103,5 +114,7 @@
             </div>
         </footer>
     </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
