--- a/menu.html
+++ b/menu.html
@@ -55,60 +55,161 @@
          <br><br><br>
          <!--  -->
         <div class="menug">
+            
             <div class="carte">
-                <ul style="display: flex;justify-content: space-around;width: 100%;">
+                <!-- <ul style="display: flex;justify-content: space-around;width: 100%;"> -->
+                <ul>    
                     <li>all</li>
-                    <li>Plat</li>
-                    <li>Salades</li>
+                    <li id="btnplat">Plat</li>
+                    <li id="salade">Salades</li>
                 </ul>
                 <div class="produit">
                     <div class="pd">
                         <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
                         <div class="txt" >
                             <label for="">nom</label>
-                            <input type="submit" value="add">
+                            <!-- <input type="submit" value="add" id="heho"> -->
+                            <button type="submit" value="1" class="heho">add</button>
                         </div>
                     </div>
                     <div class="pd">
                         <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
                         <div class="txt" >
                             <label for="">nom</label>
-                            <input type="submit" value="add">
+                            <!-- <input type="submit" value="add" id="heho"> -->
+                            <button type="submit" value="2" class="heho">add</button>
+                        </div>
+                    </div>
+                    <div class="pd">
+                        <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                        <div class="txt" >
+                            <label for="">nzzom</label>
+                            <input type="submit" value="add" name="heho" id="heho">
                         </div>
                     </div>
                     <div class="pd">
                         <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
                         <div class="txt" >
                             <label for="">nom</label>
-                            <input type="submit" value="add">
+                            <input type="submit" value="add" name="heho">
                         </div>
                     </div>
                     <div class="pd">
                         <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
                         <div class="txt" >
                             <label for="">nom</label>
-                            <input type="submit" value="add">
+                            <input type="submit" value="add" name="heho">
                         </div>
                     </div>
                     <div class="pd">
                         <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
                         <div class="txt" >
                             <label for="">nom</label>
-                            <input type="submit" value="add">
-                        </div>
-                    </div>
-                    <div class="pd">
-                        <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
-                        <div class="txt" >
-                            <label for="">nom</label>
-                            <input type="submit" value="add">
+                            <input type="submit" value="add" name="heho">
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="check">
-                <label for="">nom</label>
-                <label for="">prix</label>
+            <div class="Salades">
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <!-- <input type="submit" value="add" id="heho"> -->
+                        <button type="submit" value="1" class="heho">add</button>
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <!-- <input type="submit" value="add" id="heho"> -->
+                        <button type="submit" value="2" class="heho">add</button>
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nzzom</label>
+                        <input type="submit" value="add" name="heho" id="heho">
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <input type="submit" value="add" name="heho">
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <input type="submit" value="add" name="heho">
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <input type="submit" value="add" name="heho">
+                    </div>
+                </div>
+            </div>
+            <div class="Plat">
+                <div class="pd">
+                    <img src="ublic/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <!-- <input type="submit" value="add" id="heho"> -->
+                        <button type="submit" value="1" class="heho">add</button>
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <!-- <input type="submit" value="add" id="heho"> -->
+                        <button type="submit" value="2" class="heho">add</button>
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nzzom</label>
+                        <input type="submit" value="add" name="heho" id="heho">
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <input type="submit" value="add" name="heho">
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <input type="submit" value="add" name="heho">
+                    </div>
+                </div>
+                <div class="pd">
+                    <img src="public/playground_assets/imagei582-gws-300h.png" alt="pd1" srcset="">
+                    <div class="txt" >
+                        <label for="">nom</label>
+                        <input type="submit" value="add" name="heho">
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+            <div class="check" id="demo">
+                <div class="title" style="display: flex;justify-content:space-between ;">
+                    <p>nom</p>
+                    <p>prix</p>
+                </div>
+                <div id="add"></div>
             </div>
         </div>
 
@@ -134,7 +235,14 @@
             </div>
         </footer>
     </div>
+    <!-- <script>
+        document.getElementById("demo").innerHTML = "Hello World!";
+    </script> -->
+    <script src="test.js"></script>
     <script src="script.js"></script>
+    <script>
+       
+    </script>
 </body>
 
 </html>
