--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <div class="left">
                     <div class="ktba">
                         <div><a href="index.html">Home</a></div>
-                        <div><a href="menu.html">Menu</a></div>
+                        <div><a href="menucopy.html">Menu</a></div>
                         <div><a href="about.html">A Propos</a></div>
                         <div><a href="contact.html">Contact</a></div>
                     </div>
@@ -41,7 +41,7 @@
     
             <div class="ktba2">
                 <div><a href="index.html">Home</a></div>
-                <div><a href="menu.html">Menu</a></div>
+                <div><a href="menucopy.html">Menu</a></div>
                 <div><a href="about.html">A Propos</a></div>
                 <div><a href="contact.html">Contact</a></div>
             </div>
