--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left">
                 <div class="ktba">
                     <div><a href="#">Home</a></div>
-                    <div><a href="menu.html">Menu</a></div>
+                    <div><a href="menucopy.html">Menu</a></div>
                     <div><a href="about.html">A Propos</a></div>
                     <div><a href="contact.html">Contact</a></div>
                 </div>
@@ -34,7 +34,7 @@
 
         <div class="ktba2">
             <div><a href="index.html">Home</a></div>
-            <div><a href="menu.html">Menu</a></div>
+            <div><a href="menucopy.html">Menu</a></div>
             <div><a href="about.html">A Propos</a></div>
             <div><a href="contact.html">Contact</a></div>
         </div>
