--- a/menucopy.html
+++ b/menucopy.html
@@ -20,7 +20,7 @@
             <div class="left">
                 <div class="ktba">
                     <div><a href="index.html">Home</a></div>
-                    <div><a href="menu.html">Menu</a></div>
+                    <div><a href="menucopy.html">Menu</a></div>
                     <div><a href="about.html">A Propos</a></div>
                     <div><a href="contact.html">Contact</a></div>
                 </div>
@@ -36,7 +36,7 @@
 
         <div class="ktba2">
             <div><a href="index.html">Home</a></div>
-            <div><a href="menu.html">Menu</a></div>
+            <div><a href="menucopy.html">Menu</a></div>
             <div><a href="about.html">A Propos</a></div>
             <div><a href="contact.html">Contact</a></div>
         </div>
@@ -54,7 +54,7 @@
         <!--  -->
         <br><br><br>
         <!--  -->
-        <ul style="display: flex ;justify-content :space-around; width: 30%;">
+        <ul class="categorie" >
             <li id="all">all</li>
             <li id="btnplat">Plat</li>
             <li id="salade">Salades</li>
@@ -76,7 +76,10 @@
             
 
             <div class="check" id="demo">
-                <div id="add"></div>
+                <center><h2>Command</h2></center>
+                <div id="add" class="produit">
+                    
+                </div>
                 <button id="totale" type="submit">submit</button>
             </div>
         </div>
