--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Goûtez à la cuisine japonaise authentique</h2>
                 <p>Parmi les meilleurs chefs japonais au monde, vous servant quelque chose au-delà de la saveur.</p>
                 <br><br>
-                <input type="button" value="Our Menu">
+                <input type="button" value="Our Menu" style="background-color: darkorange; height: 50px;">
             </div>
             <div class="plat">
                 <img src="img/img.jpg" alt="" srcset="">
@@ -74,7 +74,7 @@
                     kilomètres commence par un seul pas.
                 </p>
 
-                <input type="submit" value="Our Venue"><br>
+                <input type="submit" value="Our Venue" style="background-color: darkorange;"><br>
                 <div class="tsewrate">
                     <img src="public/playground_assets/image65826-c5se-200w.png" alt="image35825" class="home-image3" />
                     <img src="public/playground_assets/image45825-qjwe-200w.png" alt="image45825" class="home-image4" />
@@ -88,7 +88,7 @@
         <!-- citation -->
         <div class="citation">
             <div>
-                <p>You can't go wrong with Chicken Mandi, I had it twice. The
+                <p>You can't go wrong with sushi Mandi, I had it twice. The
                     chicken was cooked perfectly, juicy & soft (usually mandi
                     chicken is a bit dry). I would defiantly recommend it.</p>
             </div>
