--- a/menucopy.html
+++ b/menucopy.html
@@ -110,8 +110,8 @@
     <!-- <script>
         document.getElementById("demo").innerHTML = "Hello World!";
     </script> -->
-    <!-- <script src="test.js"></script>
-    <script src="script.js"></script> -->
+    <!-- <script src="test.js"></script>-->
+    <script src="script.js"></script> 
     <script src="aaaaa.js"></script>
 </body>
 
