--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Goûtez à la cuisine japonaise authentique</h2>
                 <p>Parmi les meilleurs chefs japonais au monde, vous servant quelque chose au-delà de la saveur.</p>
                 <br><br>
-                <input type="button" value="Our Menu" style="background-color: darkorange; height: 50px;">
+                <a href="menucopy.html"><input type="button" value="Our Menu" style="background-color: darkorange; height: 50px;"></a>
             </div>
             <div class="plat">
                 <img src="img/img.jpg" alt="" srcset="">
@@ -74,7 +74,7 @@
                     kilomètres commence par un seul pas.
                 </p>
 
-                <input type="submit" value="Our Venue" style="background-color: darkorange;"><br>
+               <a href="contact.html"> <input type="submit" value="Our Venue" style="background-color: darkorange;"></a><br>
                 <div class="tsewrate">
                     <img src="public/playground_assets/image65826-c5se-200w.png" alt="image35825" class="home-image3" />
                     <img src="public/playground_assets/image45825-qjwe-200w.png" alt="image45825" class="home-image4" />
