--- a/index.html
+++ b/index.html
@@ -10,46 +10,47 @@
 </head>
 
 <body>
+
+    <div class="header">
+        <div class="right">
+            <img src="img/Sushi-removebg-preview.png" alt="" srcset="">
+        </div>
+        <div class="left">
+            <div class="ktba">
+                <div><a href="#">Home</a></div>
+                <div><a href="menucopy.html">Menu</a></div>
+                <div><a href="about.html">A Propos</a></div>
+                <div><a href="contact.html">Contact</a></div>
+            </div>
+            <a href="#" id="openBtn">
+                <span class="burger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </span>
+            </a>
+        </div>
+    </div>
+
+    <div class="ktba2">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="menucopy.html">Menu</a></div>
+        <div><a href="about.html">A Propos</a></div>
+        <div><a href="contact.html">Contact</a></div>
+    </div>
     <div class="container">
-        <div class="header">
-            <div class="right">
-                <img src="img/Sushi-removebg-preview.png" alt="" srcset="">
-            </div>
-            <div class="left">
-                <div class="ktba">
-                    <div><a href="#">Home</a></div>
-                    <div><a href="menucopy.html">Menu</a></div>
-                    <div><a href="about.html">A Propos</a></div>
-                    <div><a href="contact.html">Contact</a></div>
-                </div>
-                <a href="#" id="openBtn">
-                    <span class="burger-icon">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </span>
-                </a>
-            </div>
-        </div>
+    <!-- img de la boutique -->
+    <div class="imgkbira"></div>
+    <br><br><br><br>
 
-        <div class="ktba2">
-            <div><a href="index.html">Home</a></div>
-            <div><a href="menucopy.html">Menu</a></div>
-            <div><a href="about.html">A Propos</a></div>
-            <div><a href="contact.html">Contact</a></div>
-        </div>
-        <!-- img de la boutique -->
-        <div class="imgkbira"></div>
-        <br><br><br><br>
-
-        <!-- description avec image de plat -->
-
+    <!-- description avec image de plat -->
         <div class="part1">
             <div class="description">
                 <h2>Goûtez à la cuisine japonaise authentique</h2>
-                <p>Parmi les meilleurs chefs japonais au monde, vous servant quelque chose au-delà de la saveur.</p>
+                <!-- <p>Parmi les meilleurs chefs japonais au monde, vous servant quelque chose au-delà de la saveur.</p> -->
                 <br><br>
-                <a href="menucopy.html"><input type="button" value="Our Menu" style="background-color: darkorange; height: 50px;"></a>
+                <a href="menucopy.html"><input type="button" value="Our Menu"
+                        style="background-color: darkorange; height: 50px; margin-bottom: 10px;"></a>
             </div>
             <div class="plat">
                 <img src="img/img.jpg" alt="" srcset="">
@@ -74,7 +75,8 @@
                     kilomètres commence par un seul pas.
                 </p>
 
-               <a href="contact.html"> <input type="submit" value="Our Venue" style="background-color: darkorange;"></a><br>
+                <a href="contact.html"> <input type="submit" value="Our Venue"
+                        style="background-color: darkorange;" ></a><br>
                 <div class="tsewrate">
                     <img src="public/playground_assets/image65826-c5se-200w.png" alt="image35825" class="home-image3" />
                     <img src="public/playground_assets/image45825-qjwe-200w.png" alt="image45825" class="home-image4" />
@@ -96,24 +98,26 @@
         <!--  -->
         <br><br><br><br>
         <!--  -->
-        <!-- footer -->
-        <footer class="footer">
-            <div class="logo_footer">
-                <img src="img/Sushi-removebg-preview.png" alt="logo_footer">
-            </div>
-            <div class="menu_footer">
-                <ul>
-                    <li>home</li>
-                    <li>menu</li>
-                    <li>a propos</li>
-                    <li>contact us</li>
-                </ul>
-            </div>
-            <div class="copyright_footer">
-                © 2021 | All rights reserved.
-            </div>
-        </footer>
     </div>
+    <!-- footer -->
+    <footer class="footer">
+        <div class="logo_footer">
+            <img src="img/Sushi-removebg-preview.png" alt="logo_footer">
+        </div>
+        <div class="menu_footer">
+            <ul>
+                <li>home</li>
+                <li>menu</li>
+                <li>a propos</li>
+                <li>contact us</li>
+            </ul>
+        </div>
+        <hr>
+        <div class="copyright_footer">
+            © 2021 | All rights reserved.
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 
